gitTestProject/src/objects/Video__c.object
<CustomObject>
    <fields>
        <fullName>Media__c</fullName>
        <label>Media</label>
        <referenceTo>Media__c</referenceTo>
        <relationshipLabel>Videos</relationshipLabel>
        <relationshipName>Videos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Video</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VN-{000000}</displayFormat>
        <label>Video #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Videos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>